footer contrast errors and li element errors fixed

--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -31,7 +31,6 @@ footer{
     padding: .5rem;
     text-align: center;
     grid-column: 1/4;
-    color:white;
 }
 
 .navigation{
